# md_to_conf

./: md2conf.py  pyproject.toml
