[tool.poetry]
name = "md_to_conf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2021.10.8"
chardet = "5.0.0"
idna = "3.3"
Markdown = "3.4.1"
requests = "2.27.1"
urllib3 = "1.26.9"
mdx-wikilink-plus = "^1.4.1"
pymdown-extensions = "^9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
